tests/e2e/fail/v8_fail_shift_count.ep
# EXIT: 1
# STDOUT: panic line 0: invalid shift count
fun main(): void {
    let n = 64
    exit(1 << n)
}
